--- a/product.yml
+++ b/product.yml
@@ -37,7 +37,7 @@ spring:
     url: jdbc:postgresql://192.168.99.100:5432/postgres
     driverClassName: org.postgresql.Driver
     username: postgres
-    password: 1q2w3e
+    password: 1q2w3e4
     validation-query: SELECT 1
     test-while-idle: true
     test-on-borrow: true
